--- a/package.json
+++ b/package.json
@@ -6,14 +6,48 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": ">=14.9.3"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mohitsenapaty/authy-basic.git"
   },
-  "author": "",
+  "author": "Mohit",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/mohitsenapaty/authy-basic/issues"
   },
-  "homepage": "https://github.com/mohitsenapaty/authy-basic#readme"
+  "homepage": "https://github.com/mohitsenapaty/authy-basic#readme",
+  "dependencies": {
+    "axios": "^0.27.2",
+    "bluebird": "^3.7.2",
+    "body-parser": "^1.20.0",
+    "celebrate": "^15.0.1",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv-safe": "^8.2.0",
+    "express": "^4.18.1",
+    "express-winston": "^4.2.0",
+    "helmet": "^5.1.0",
+    "http-status": "^1.5.2",
+    "lodash": "^4.17.21",
+    "method-override": "^3.0.0",
+    "moment": "^2.29.4",
+    "passport": "^0.6.0",
+    "passport-http": "^0.3.0",
+    "uuid": "^8.3.2",
+    "uuid-apikey": "^1.5.3",
+    "winston": "^3.8.1",
+    "winston-daily-rotate-file": "^4.7.1"
+  },
+  "devDependencies": {
+    "apidoc": "^0.20.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.1",
+    "husky": "^4.2.3",
+    "nodemon": "^2.0.2",
+    "open-cli": "^5.0.0"
+  }
 }
