--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Authenticator service",
   "main": "index.js",
   "scripts": {
+    "start": "node ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
@@ -27,6 +28,7 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv-safe": "^8.2.0",
+    "dynamoose": "^2.8.5",
     "express": "^4.18.1",
     "express-winston": "^4.2.0",
     "helmet": "^5.1.0",
@@ -34,6 +36,7 @@
     "lodash": "^4.17.21",
     "method-override": "^3.0.0",
     "moment": "^2.29.4",
+    "order-id": "^2.1.2",
     "passport": "^0.6.0",
     "passport-http": "^0.3.0",
     "uuid": "^8.3.2",
