--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/mohitsenapaty/authy-basic#readme",
   "dependencies": {
     "axios": "^0.27.2",
+    "bcryptjs": "^2.4.3",
     "bluebird": "^3.7.2",
     "body-parser": "^1.20.0",
     "celebrate": "^15.0.1",
@@ -33,6 +34,7 @@
     "express-winston": "^4.2.0",
     "helmet": "^5.1.0",
     "http-status": "^1.5.2",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "method-override": "^3.0.0",
     "moment": "^2.29.4",
